// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetching target clusters is pending 1`] = `
Object {
  "errorFetchingTargetClusters": null,
  "isFetchingTargetClusters": true,
  "isRejectedTargetClusters": false,
  "targetClusters": Array [],
}
`;

exports[`fetching target clusters is rejected 1`] = `
Object {
  "errorFetchingTargetClusters": "error",
  "isFetchingTargetClusters": false,
  "isRejectedTargetClusters": true,
  "targetClusters": Array [],
}
`;

exports[`fetching target clusters is successful, and there is data 1`] = `
Object {
  "errorFetchingTargetClusters": null,
  "isFetchingTargetClusters": false,
  "isRejectedTargetClusters": false,
  "targetClusters": Array [
    Object {
      "0": Object {
        "created_on": "2016-08-03T02:19:35Z",
        "drs_automation_level": "fullyAutomated",
        "drs_enabled": false,
        "drs_migration_threshold": 3,
        "effective_cpu": 109356,
        "effective_memory": 789977235456,
        "ems_id": "10000000000007",
        "ems_ref": "domain-c7",
        "ems_ref_obj": "domain-c7",
        "ext_management_system": Object {
          "emstype": "rhevm",
        },
        "ha_admit_control": true,
        "ha_enabled": false,
        "ha_max_failures": 1,
        "href": "http://localhost:3000/api/clusters/10000000000006",
        "id": "1",
        "last_perf_capture_on": null,
        "name": "RHV Cluster1",
        "type": null,
        "uid_ems": "domain-c7",
        "updated_on": "2017-02-26T02:33:43Z",
        "v_parent_datacenter": "Default",
      },
      "1": Object {
        "created_on": "2016-08-03T02:19:35Z",
        "drs_automation_level": "fullyAutomated",
        "drs_enabled": false,
        "drs_migration_threshold": 3,
        "effective_cpu": 109356,
        "effective_memory": 789977235456,
        "ems_id": "10000000000008",
        "ems_ref": "domain-c7",
        "ems_ref_obj": "domain-c7",
        "ext_management_system": Object {
          "emstype": "rhevm",
        },
        "ha_admit_control": true,
        "ha_enabled": false,
        "ha_max_failures": 1,
        "href": "http://localhost:3000/api/clusters/10000000000007",
        "id": "2",
        "last_perf_capture_on": null,
        "name": "RHV Cluster2",
        "type": null,
        "uid_ems": "domain-c7",
        "updated_on": "2017-02-26T02:33:43Z",
        "v_parent_datacenter": "Default",
      },
    },
  ],
}
`;

exports[`fetching target clusters is successful, and there is no data 1`] = `
Object {
  "errorFetchingTargetClusters": null,
  "isFetchingTargetClusters": false,
  "isRejectedTargetClusters": false,
  "targetClusters": Array [],
}
`;

exports[`sets default state 1`] = `
Object {
  "errorFetchingTargetClusters": null,
  "isFetchingTargetClusters": false,
  "isRejectedTargetClusters": false,
  "targetClusters": Array [],
}
`;
